# Ros2_study_and_project

./: README.md
install/camera_pkg/lib/camera_pkg/: image_processing
install/camera_pkg/share/camera_pkg/: package.sh  package.xml
install/communication_pkg/lib/communication_pkg/: holder_ball_robot
install/communication_pkg/share/communication_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/control_pkg/lib/control_pkg/: control
install/control_pkg/share/control_pkg/: package.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  battery_node  cpp_node  hw_status_publisher  led_panel_node  number_counter  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/lib/my_py_pkg/: pwm_generator_sim
log/: latest_build
src/camera_pkg/: CMakeLists.txt
src/camera_pkg/src/: image_processing.cpp
src/communication_pkg/: CMakeLists.txt  package.xml
src/communication_pkg/src/: holder_ball_robot.cpp
src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/src/: control.cpp
src/microROS_interface/src/: main.cpp
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery_node.cpp  holder_ball_robot.cpp  hw_status_publisher.cpp  led_panel_node.cpp  my_first_node.cpp  number_counter.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client_no_oop.py  my_first_node.py  pwm_generator_sim.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: ball_float_app.launch.py  number_app.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: LedPanelState.msg
src/my_robot_interfaces/srv/: SetLed.srv
(+30 files in other folders)
